--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -19,3 +19,11 @@
 .hero-section {
   background: linear-gradient(90deg, #020024, #e0f5f1 0, #fff4f4);
 }
+.project_area {
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(252, 244, 244, 0.7595413165266106) 0%,
+    rgba(236, 245, 242, 1) 100%
+  );
+}
