update all pages for responsive

--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -19,6 +19,15 @@
 .hero-section {
   background: linear-gradient(90deg, rgba(211, 237, 231, 1) 0%, rgba(247, 239, 239, 1) 100%);
 }
+@media all and (max-width: 430px) {
+  .hero_image {
+    width: 170px;
+    height: 150px;
+  }
+  .title {
+    margin-left: 120px;
+  }
+}
 
 .project_area {
   background: linear-gradient(90deg, rgb(231 245 242) 0%, rgb(245 245 234) 100%);
@@ -31,7 +40,7 @@
   text-align: center;
   border: 1px solid #eaebed;
   box-shadow: 0 0.5em 1em -0.125em #8a8a8a1a, 0 0 0 1px #0a0a0a00;
-  padding: 10px;
+  padding: 30px;
   border-radius: 5px;
 }
 .single_tech_item:hover {
@@ -45,5 +54,8 @@
   width: 50px;
 }
 .contact_area {
-  background: linear-gradient(49deg, rgb(241 247 246) 0%, rgb(227 233 230) 100%);
+  background: linear-gradient(108deg, rgb(241 247 246) 0%, rgb(194 228 223 / 26%) 100%);
+}
+.page .page_area {
+  padding: 150px 0 50px 0;
 }
